<resources>
    <string name="app_name">NomadiKey</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_input_password">InputPasswordActivity</string>

    <!-- ACTIVITY TITLES -->

    <string name="inputPasswdTitle">Alterar senha</string>

    <!-- END OF ACTIVITY TITLES -->

    <!--TEXT VIEWS-->

    <string name="tvInputStroke">Create a stroke</string>
    <string name="tvConfirmStroke">Confirm your stroke</string>
    <string name="tvInputPasswd">Entre com a nova senha</string>
    <string name="tvConfirmPasswd">Confirme sua nova senha</string>
    <string name="nativeKeyguard">Native Keyguard</string>
    <string name="tvClearPasswdFile">Remove stored nomadPassword</string>
    <string name="general">General</string>
    <string name="stgLock">Standard lock</string>
    <string name="icLock">Incoming call lock</string>
    <string name="std_change_passwd">Change Password</string>
    <string name="delete_passwd">ResetPassword</string>
    <string name="test_passwd">Test Password</string>
    <string name="std_change_stroke">Change stroke</string>
    <string name="delete_stroke">Reset stroke</string>
    <string name="test_stroke">Test stroke</string>
    <string name="stdLockSummary">Enable/disable lock screen</string>
    <string name="icLockSummary">Enable/disable one stroke lock screen to answer incoming calls</string>
    <string name="incomingCall">Incoming call! Enter the PIN to answer the call.</string>
    <string name="tvPinReactionLog">Reaction time of PIN lock</string>
    <string name="tvStrokeReactionLog">Reaction time of Stroke lock</string>
    <string name="PrefPinReactionLog">Reaction time Log</string>
    <string name="PrefStrokeReactionLog">Reaction time Log</string>

    <string name="generalInfo">Informações gerais</string>
    <string name="gender">1) Sexo</string>
    <string name="genderMale">Masculino</string>
    <string name="genderFemale">Feminino</string>

    <string name="age">2) Faixa etária</string>
    <string name="age0">Menos de 18 </string>
    <string name="age1">18 - 25</string>
    <string name="age2">26 - 30</string>
    <string name="age3">31 - 35</string>
    <string name="age4">36 - 40</string>
    <string name="age5">41 - 45</string>
    <string name="age6">46 - 50</string>
    <string name="age7">51 - 60</string>
    <string name="age8">Mais de 60</string>

    <string name="unlockMethod">3) Qual método de desbloqueio você usa no seu smartphone?</string>
    <string name="unlockMethod2">Nenhum</string>
    <string name="unlockMethod3">PIN</string>
    <string name="unlockMethod4">Senha</string>
    <string name="unlockMethod5">Desenho de padrão</string>
    <string name="unlockMethod6">Biometria</string>
    <string name="unlockMethod7">Outro</string>

    <string name="ustd">4) Como você avaliaria a usabilidade do teclado tradicional?</string>
    <string name="urand">5) Como você avaliaria a usabilidade do teclado aleatório?</string>
    <string name="unk">6) Como você avaliaria a usabilidade do teclado nômade?</string>
    <string name="sstd">7) Como você avaliaria a segurança do teclado tradicional?</string>
    <string name="srand">8) Como você avaliaria a segurança do teclado aleatório?</string>
    <string name="snk">9) Como você avaliaria a segurança do teclado nômade?</string>
    <string name="use">10) Você usaria o teclado nômade como método de desbloqueio do seu smartphone?</string>

    <!--END OF TEXT VIEWS-->

    <!--BUTTONS-->

    <string name="bConfirm">Confirmar</string>
    <string name="bCancel">Cancelar</string>
    <string name="bErase">Apagar</string>
    <string name="bClickNDrag">Click and drag</string>
    <string name="bStrokeMe">Stroke me to unlock</string>
    <string name="bSend">Send by e-mail</string>
    <string name="bEraseLog">Erase log</string>

    <!--END OF BUTTONS-->

    <!--TOASTS-->

    <string name="passwdCorrect">Password is correct. Unlocking device.</string>
    <string name="incorrectPasswd">Senha incorreta. Tente novamente</string>
    <string name="incorrectStroke">Stroke incorrect. Please, try again.</string>
    <string name="typedNotMatchPasswd">As senhas digitadas não são iguais. Tente novamente</string>
    <string name="typedNotMatchStroke">Strokes do not match. Please, try again.</string>
    <string name="newPasswdSet">Nova senha cadastrada</string>
    <string name="newStrokeSet">New stroke set</string>
    <string name="emptyPasswd">Senha em branco. Digite uma senha</string>
    <string name="passwdResetted">Password reset</string>
    <string name="passwdNotResetted">Password not reset</string>
    <string name="strokeReset">Stroke reset</string>
    <string name="strokeNotReset">Stroke not reset</string>
    <string name="passwdNotSet">No Password set. Let\'s do it now</string>
    <string name="strokeNotSet">No stroke set. Let\'s do it now</string>
    <string name="reset">Reset Password?</string>
    <string name="msg_reset">Do you really want to reset the Password? This action can not be undone.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="title_activity_one_stroke_input_password">OneStrokeInputPasswordActivity</string>
    <string name="createPasswdFirst">Nenhuma senha cadastrada. Cadastre uma senha para continuar</string>
    <string name="createOneStrokeFirst">No stroke set. Create one first</string>
    <string name="title_activity_stroke_lock_screen">StrokeLockScreen</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_standard_keyboard">StandardKeyboard</string>

    <string name="title_activity_generic_lock_screen">GenericLockScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_questions">QuestionsActivity</string>
    <string name="title_activity_welcome">welcome</string>

    <!--END OF TOASTS-->

</resources>
