<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="101"
    tools:context="lockscreen.u2d.controller.QuestionsActivity">

    <include layout="@layout/cancel_confirm_layout"/>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="440dp">

        <ScrollView

            android:id="@+id/form"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/llForm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/abc_search_url_text"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/generalInfo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gender"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genderMale"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genderFemale"/>

                </RadioGroup>


                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/age"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age0"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age1"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age2"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age3"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age4"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age5"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age6"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age7"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age8"/>


                </RadioGroup>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unlockMethod"
                    android:layout_marginRight="10dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/unlock">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod2"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod3"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod4"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod5"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod6"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unlockMethod7"/>


                </RadioGroup>

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/ustd"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/ustd"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/ustdVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/urand"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/urand"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/urandVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/unk"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/unk"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/unkVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/sstd"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/sstd"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/sstdVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/srand"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/srand"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/srandVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/snk"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<SeekBar-->
                        <!--android:id="@+id/snk"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:layout_width="280dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <!--<TextView-->
                        <!--android:text="1"-->
                        <!--android:textSize="20dp"-->
                        <!--android:gravity="center_vertical"-->
                        <!--android:id="@+id/snkVal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <!--<TextView-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/use"-->
                    <!--android:layout_marginRight="10dp"/>-->

                <!--<RadioGroup-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/woulduse"-->
                    <!--android:orientation="horizontal">-->

                    <!--<RadioButton-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/yes"/>-->

                    <!--<RadioButton-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/no"/>-->

                <!--</RadioGroup>-->


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
